tests/compile_fail/wrong_token.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/wrong_token.rs:11:23
   |
11 |         requires_avx2(sse41);
   |         ------------- ^^^^^ expected `Avx2Token`, found `Sse41Token`
   |         |
   |         arguments to this function are incorrect
   |
note: function defined here
  --> tests/compile_fail/wrong_token.rs:6:4
   |
 6 | fn requires_avx2(_token: Avx2Token) {}
   |    ^^^^^^^^^^^^^ -----------------
